[package]
name = "wasm-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
futures = "0.3.17"
js-sys = "0.3.55"
log = "0.4.14"
parking_lot = { version = "0.11.2", features = ["wasm-bindgen", "nightly"] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["sync"] }
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
wasm-futures-executor = "0.1.2"
web-sys = "0.3.55"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
